[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "^0.11.1", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "^0.11.1"
jsonwebtoken = "8.2.0"
bcrypt = "0.14"
dotenvy = "0.15.6"
